--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Mir2016
 description: Хранилище по МИР
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-architect
+theme: jekyll-theme-dinky
 
 gems:
   - jekyll-mentions
